<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/app_name"
         />

    <EditText
        android:id="@+id/etStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAppName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/name_label"
        android:inputType="number"
        android:textAlignment="center"
         />

    <EditText
        android:id="@+id/etStudentEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etStudentName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/email_label"
        android:inputType="number"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/etStudentNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etStudentEmail"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/student_id_label"
        android:inputType="number"
        android:textAlignment="center"
         />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etStudentNumber"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:textAlignment="center"
         />

    <EditText
        android:id="@+id/etConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_label"
         />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirm"
        android:layout_centerHorizontal="true"
        android:text="@string/reg_btn_label"
         />
</RelativeLayout>