<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/app_name"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="175dp" />

    <EditText
        android:id="@+id/etStudentNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAppName"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/student_id_label"
        android:inputType="number"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="243dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etStudentNumber"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="316dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/login_label"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="401dp" />

    <TextView
        android:id="@+id/tvCallToAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:text="@string/reg_question"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="470dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCallToAction"
        android:layout_centerHorizontal="true"
        android:text="@string/reg_btn_label"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="521dp" />
</RelativeLayout>